# kobashell

./: .gitignore  CMakeLists.txt  Makefile  Makefile.old  README.md  config.h  getline.c  int_list.c  ish  ish.c  job.c  kobash.h  myexec  myexec.c  path.c  signal.c
parser/: parse.c  parse.h
